--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "private": true,
-  "main": "main.js",
+  "main": "src/backend/main.js",
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
@@ -25,7 +25,9 @@
     "electron-builder": "^23.6.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-includepaths": "^0.2.4",
     "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-polyfill-node": "^0.11.0",
     "rollup-plugin-svelte": "^7.0.0",
     "rollup-plugin-terser": "^7.0.0",
     "smui-theme": "^7.0.0-beta.0",
