--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "dist": "npm run build && electron-builder",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "prepare": "npm run smui-theme-light && npm run smui-theme-dark",
-    "smui-theme-light": "smui-theme compile public/build/smui.css -i src/theme",
-    "smui-theme-dark": "smui-theme compile public/build/smui-dark.css -i src/theme/dark"
+    "smui-theme-light": "smui-theme compile public/build/smui.css -i src/frontend/theme",
+    "smui-theme-dark": "smui-theme compile public/build/smui-dark.css -i src/frontend/theme/dark"
   },
   "devDependencies": {
+    "@material/typography": "^14.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@smui/button": "^7.0.0-beta.0",
     "@smui/list": "^7.0.0-beta.0",
     "@smui/menu": "^7.0.0-beta.0",
+    "@smui/textfield": "^7.0.0-beta.0",
     "@tsconfig/svelte": "^2.0.0",
     "electron": "^21.3.1",
     "electron-builder": "^23.6.0",
@@ -38,6 +40,8 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "@mdi/js": "^7.0.96",
+    "fs": "^0.0.1-security",
     "sirv-cli": "^2.0.0",
     "svelte-material-ui": "^7.0.0-beta.0"
   }
