--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@tsconfig/svelte/tsconfig.json",
 
-  "include": ["src/**/*"],
+  "include": ["src/frontend/**/*"],
   "exclude": ["node_modules/*", "__sapper__/*", "public/*"]
 }
