--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@smui/button": "^7.0.0-beta.0",
+    "@smui/layout-grid": "^7.0.0-beta.0",
     "@smui/list": "^7.0.0-beta.0",
     "@smui/menu": "^7.0.0-beta.0",
     "@smui/textfield": "^7.0.0-beta.0",
@@ -42,6 +43,7 @@
   "dependencies": {
     "@mdi/js": "^7.0.96",
     "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "sirv-cli": "^2.0.0",
     "svelte-material-ui": "^7.0.0-beta.0"
   }
